--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 
 <body>
     <script>
-
         //selecting random move
         function computerPlay(){        
             let move;
@@ -46,18 +45,53 @@
             else console.log("something weird happened");
         }
 
-        function incrementer(input, playerScore, comScore){
+        //increments counter based on who wins
+        function incrementer(input){
             if (input === "player"){
-                playerScore++;
+                playerScore += 1;
             }
             else if (input === "com"){
-                comScore++;
+                comScore += 1;
             }
             else if (input === "tie") {
-                playerScore++
-                comScore++
+                playerScore += 1;
+                comScore += 1;
             }
             else {}
         }
+
+        let playerScore = 0;
+        let comScore = 0;
+
+function game(){
+    let roundResult;
+
+    roundResult = playRound(window.prompt("State your move"), computerPlay());
+    incrementer(roundResult);
+    roundResult = playRound(window.prompt("State your move"), computerPlay());
+    incrementer(roundResult);
+    roundResult = playRound(window.prompt("State your move"), computerPlay());
+    incrementer(roundResult);
+    roundResult = playRound(window.prompt("State your move"), computerPlay());
+    incrementer(roundResult);
+    roundResult = playRound(window.prompt("State your move"), computerPlay());
+    incrementer(roundResult);
+    
+    if (playerScore > comScore){
+        console.log(`YOU WON THE GAME, you scored ${playerScore} and cpu scored ${comScore}`);
+    }
+    else if (comScore < playerScore){
+        console.log(`YOU LOST THE GAMEE, you scored ${playerScore} and cpu scored ${comScore}`);
+    }
+    else if (comScore === playerScore){
+        console.log(`IT'S A TIE, both scored ${playerScore}`);
+    }
+    else{
+        console.log("something went wrong");
+    }
+
+    playerScore = 0;
+    comScore = 0;
+}
     </script>
 </body>
