created main homepage buttons

--- a/index.html
+++ b/index.html
@@ -7,5 +7,19 @@
 
 
 <body>
-    
+    <header>
+        SimpleRPS
+    </header>
+
+    <div id="main_container">
+        <div id="button_container">
+            <div id="button">
+                <img id="button_img" src="assets/icons/5round_icon.png">
+            </div>
+            <div id="button">
+                <img id="button_img" src="assets/icons/endless_icon.png">
+            </div>
+            </div>
+        </div>
+    </div>
 </body>
