finished constructing the homepage

--- a/index.html
+++ b/index.html
@@ -1,25 +1,41 @@
 <!DOCTYPE html>
 
-<head>
-    <script src="scripts.js"></script>
-    <link rel="stylesheet" href="styles.css">
-</head>
+
 
 
 <body>
     <header>
-        SimpleRPS
+        Simple RPS
     </header>
 
     <div id="main_container">
         <div id="button_container">
             <div id="button">
-                <img id="button_img" src="assets/icons/5round_icon.png">
+                <img id="menu_button_img" src="assets/icons/5round_icon.png">
             </div>
             <div id="button">
-                <img id="button_img" src="assets/icons/endless_icon.png">
+                <img id="menu_button_img" src="assets/icons/endless_icon.png">
             </div>
             </div>
         </div>
     </div>
+
+    <div id="subtitle_container">
+        <div id="subtitle">
+            Fiver
+        </div>
+        <div id="subtitle">
+            Endless
+        </div>
+    </div>
+
+    <div id="description_container">
+        <div id="description">
+        </div>
+    </div>
 </body>
+
+<head>
+    <script src="scripts.js"></script>
+    <link rel="stylesheet" href="styles.css">
+</head>
