--- a/index.html
+++ b/index.html
@@ -8,23 +8,33 @@
         Simple RPS
     </header>
 
+    <div id="score_container">
+        
+    </div>
+
     <div id="main_container">
         <div id="button_container">
+            <div id="button">
+                <img id="menu_button_img" src="assets/icons/single_icon.png">
+            </div>
             <div id="button">
                 <img id="menu_button_img" src="assets/icons/5round_icon.png">
             </div>
             <div id="button">
                 <img id="menu_button_img" src="assets/icons/endless_icon.png">
             </div>
-            </div>
+            
         </div>
     </div>
 
     <div id="subtitle_container">
-        <div id="subtitle">
+        <div id="subtitle" style="padding-left: 20px;">
+            Single
+        </div>
+        <div id="subtitle" style="padding-left: 210px;">
             Fiver
         </div>
-        <div id="subtitle">
+        <div id="subtitle" style="padding-left: 190px;">
             Endless
         </div>
     </div>
