made transition for buttons and subtitles

--- a/index.html
+++ b/index.html
@@ -14,16 +14,17 @@
 
     <div id="main_container">
         <div id="button_container">
-            <div id="button">
-                <img id="menu_button_img" src="assets/icons/single_icon.png">
+            <div id="menu_button_container">
+                <div id="button">
+                    <img id="menu_button_img" src="assets/icons/single_icon.png">
+                </div>
+                <div id="button">
+                    <img id="menu_button_img" src="assets/icons/5round_icon.png">
+                </div>
+                <div id="button">
+                    <img id="menu_button_img" src="assets/icons/endless_icon.png">
+                </div>
             </div>
-            <div id="button">
-                <img id="menu_button_img" src="assets/icons/5round_icon.png">
-            </div>
-            <div id="button">
-                <img id="menu_button_img" src="assets/icons/endless_icon.png">
-            </div>
-            
         </div>
     </div>
 
