created score transitions

--- a/index.html
+++ b/index.html
@@ -8,8 +8,21 @@
         Simple RPS
     </header>
 
-    <div id="score_container">
-        
+    <div id="score_section">
+        <div id="score_container">
+            <div id="player_container" class="icon_container">
+                <div id="player_icon" style="background-color: #1356a9;"></div>
+                Player
+            </div>
+            <div id="score">
+                1 - 0
+            </div>
+            <div id="cpu_container" class="icon_container">
+                <div id="player_icon" style="background-color: #b92525;"></div>
+                CPU
+            </div>
+
+        </div>
     </div>
 
     <div id="main_container">
