implemented all logic and added various elements

--- a/index.html
+++ b/index.html
@@ -11,14 +11,18 @@
     <div id="score_section">
         <div id="score_container">
             <div id="player_container" class="icon_container">
-                <div id="player_icon" style="background-color: #1356a9;"></div>
+                <div id="player_icon" style="background-color: #1356a9;">
+                    <div style="background-color: white; height: 75px; width: 75px; border:none; border-radius: 50%; margin: 37.5px;"></div>
+                </div>
                 Player
             </div>
             <div id="score">
-                1 - 0
+                0 - 0
             </div>
             <div id="cpu_container" class="icon_container">
-                <div id="player_icon" style="background-color: #b92525;"></div>
+                <div id="player_icon" class="cpu_icon" style="background-color: #b92525;">
+                    <div style="background-color: white; height: 75px; width: 75px; border:none; border-radius: 50%; margin: 37.5px;"></div>
+                </div>
                 CPU
             </div>
 
